fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,6 @@ a {
   color: black;
 } */
 
-p {
-  color: #505050;
-  font-size: 14px;
-  font-weight: 300;
-  letter-spacing: 0.5px;
-  line-height: 2;
-  margin-bottom: 20px;
-}
 
 span {
   letter-spacing: 1px;
@@ -79,11 +71,10 @@ span {
     height: calc(100vh - 40px);
     background-size: 100%;
     position: relative;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 40px;
   }
 }
-
 
 #hero .hero-container {
   position: absolute;
@@ -98,6 +89,24 @@ span {
   text-align: left;
   max-width: 850px;
   margin: auto;
+}
+
+@media (max-width: 500px) {
+  #hero .hero-container {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 20px;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+    text-align: left;
+    max-width: 850px;
+    margin: auto;
+    margin-top: 300px;
+  }
 }
 
 #hero h1 {
@@ -121,10 +130,10 @@ span {
 #hero h2 {
   color: black;
   margin-bottom: 0px;
-  font-size: 16px;
+  font-size: 15px;
   font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 24px;
 }
 
 @media (max-width: 768px) {
@@ -144,17 +153,18 @@ ul {
 
 li {
   color: black;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 24px;
   font-family: "Nunito Sans", sans-serif;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
   li {
     font-size: 14px;
     line-height: 22px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 }
 
